--- a/app/src/main/res/layout/activity_change_pass.xml
+++ b/app/src/main/res/layout/activity_change_pass.xml
@@ -4,49 +4,70 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
-    tools:context=".MainActivity">
+    tools:context=".ChangePassActivity">
 
     <TextView
+        android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="44dp"
-        android:text="Login"
-        android:textAppearance="@style/TextAppearance.Material3.DisplayLarge"
-        app:layout_constraintBottom_toTopOf="@+id/tilCorreo"
+        android:layout_marginTop="30dp"
+        android:text="Cambiar Contraseña"
+        android:textAppearance="@style/TextAppearance.Material3.DisplaySmall"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.textfield.TextInputLayout
-        app:startIconDrawable="@drawable/ic_email"
-        android:layout_marginHorizontal="50dp"
-        android:id="@+id/tilCorreo"
+        android:id="@+id/tilPassActual"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Correo Electronico"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_marginHorizontal="50dp"
+        app:endIconMode="password_toggle"
+        android:hint="Contraseña actual"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:startIconDrawable="@drawable/ic_key"
+        android:layout_marginTop="50dp"
+        tools:layout_editor_absoluteX="50dp">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/etCorreo"
+            android:id="@+id/etPassActual"
+            android:inputType="textPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </com.google.android.material.textfield.TextInputLayout>
 
+
     <com.google.android.material.textfield.TextInputLayout
         android:layout_marginHorizontal="50dp"
-        app:startIconDrawable="@drawable/ic_password"
+        app:startIconDrawable="@drawable/ic_key"
         android:id="@+id/tilPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Contraseña"
+        android:hint="Nueva contraseña"
         android:layout_marginTop="20dp"
         app:endIconMode="password_toggle"
-        app:layout_constraintTop_toBottomOf="@+id/tilCorreo">
+        app:layout_constraintTop_toBottomOf="@+id/tilPassActual">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"/>
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_marginHorizontal="50dp"
+        app:startIconDrawable="@drawable/ic_key"
+        android:id="@+id/tilPassword2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Connfirmar Contraseña"
+        android:layout_marginTop="20dp"
+        app:endIconMode="password_toggle"
+        app:layout_constraintTop_toBottomOf="@+id/tilPassword">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/etPassword2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"/>
@@ -56,20 +77,11 @@
         android:layout_marginHorizontal="50dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/btnLogin"
-        android:text="Iniciar Sesión"
+        android:id="@+id/btnChangePass"
+        android:text="Registrar Usuario"
         android:layout_marginTop="40dp"
-        app:layout_constraintTop_toBottomOf="@+id/tilPassword" />
+        app:layout_constraintTop_toBottomOf="@+id/tilPassword2" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="¿No tienes cuenta? Registrate"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
-        android:id="@+id/tvRegistrar"
-        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
-        android:layout_marginTop="10dp"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
